--- a/env.example
+++ b/env.example
@@ -2,8 +2,8 @@
 OPENAI_API_KEY=your_openai_api_key_here
 
 # 서버 설정
-PORT=3000
-NODE_ENV=development
+PORT=10000
+NODE_ENV=production
 
 # 파일 업로드 설정
 MAX_FILE_SIZE=10485760
