feat: Add OpenAI proxy endpoints and update UI
- Add OpenAI chat completions proxy endpoint (/api/openai/chat/completions)
- Add OpenAI vision proxy endpoint (/api/openai/vision)
- Update payment options with KakaoPay, NaverPay, TossPay, Card
- Update logo styling and remove text subtitle
- Update upload requirements text
- Add Render deployment configuration
- Update color scheme to #CD3D3A

--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,13 @@
 services:
   - type: web
-    name: beauty-ai-app
+    name: better-me-app
     env: node
     plan: free
     buildCommand: npm install
-    startCommand: node server.js
+    startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
-      - key: PORT
-        value: 10000
       - key: OPENAI_API_KEY
         sync: false
+    healthCheckPath: /api/health
