--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-# OpenAI API 설정
+# OpenAI API 설정 (Render에서 환경변수로 설정)
 OPENAI_API_KEY=your_openai_api_key_here
 
 # 서버 설정
@@ -9,5 +9,5 @@ NODE_ENV=production
 MAX_FILE_SIZE=10485760
 UPLOAD_PATH=./uploads
 
-# CORS 설정
-CORS_ORIGIN=http://localhost:5500
+# CORS 설정 (Render URL로 변경 필요)
+CORS_ORIGIN=https://your-app-name.onrender.com
