--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
+    "express-rate-limit": "^8.1.0",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.20.1",
     "sharp": "^0.32.6",
