Update: Enhanced face analysis with English support and UI improvements
- Updated GPT face analysis prompts for both Korean and English versions
- Added detailed analysis sections (wrinkles, aegyo-sal, mouth protrusion)
- Fixed API port configuration (3001 -> 3000)
- Changed hair/makeup tip button to 'Back to Main Page' button
- Swapped button colors and positions (mobile: image save on top, back to main on bottom)
- Disabled makeup tips service with Coming Soon overlay
- Fixed click animation effects for all service cards
- Added comprehensive English language support

--- a/env.example
+++ b/env.example
@@ -11,3 +11,18 @@ UPLOAD_PATH=./uploads
 
 # CORS 설정 (Render URL로 변경 필요)
 CORS_ORIGIN=https://your-app-name.onrender.com
+
+# 결제 API 설정
+# 카카오페이 (https://developers.kakao.com/console/app/491421/config/payment)
+KAKAO_PAY_ADMIN_KEY=your_kakao_pay_admin_key_here
+
+# 토스페이먼츠 (https://developers.tosspayments.com/)
+TOSS_SECRET_KEY=your_toss_secret_key_here
+
+# 해외 결제 API 설정
+# PayPal (https://developer.paypal.com/)
+PAYPAL_CLIENT_ID=your_paypal_client_id_here
+PAYPAL_CLIENT_SECRET=your_paypal_client_secret_here
+
+# Stripe (https://stripe.com/docs/api)
+STRIPE_SECRET_KEY=your_stripe_secret_key_here
