--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "vercel --prod"
   },
   "dependencies": {
+    "@tosspayments/payment-sdk": "^1.9.1",
     "axios": "^1.11.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
